# 03.007-Design-Thnking-and-Innovation

./: .gitignore  README.md  fun.py  main.py  pyproject.toml  requirements.txt  test.py
src/: main.py
